--- a/Views/Movies/Index2.cshtml
+++ b/Views/Movies/Index2.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model IEnumerable<MovieProject.Models.Movie>
+
 @{
     ViewData["Title"] = "Index2";
 }
@@ -6,46 +7,20 @@
 <h1>Index2</h1>
 
 
-<form>
 
 
-    <div class="form-group">
+<form asp-controller="Products" asp-action="Index" method="get">
+            <input type="text" name="InputName"  placeholder="Enter name" />
+            <br />
+            <br />
 
+           
+            <input type="text" name="InputUser"  placeholder="Enter password name" />
+            <br />
+            <br />
 
-        <label for="exampleInputEmail1">Email address</label>
-
-
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-
-
-    </div>
-
-
-    <div class="form-group">
-
-
-        <label for="exampleInputPassword1">Password</label>
-
-
-        <input type="password" class="form-control" id="exampleInputPassword1">
-
-
-    </div>
-
-
-    <div class="form-group form-check">
-
-
-        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-
-
-        <label class="form-check-label" for="exampleCheck1">Remember me</label>
-
-
-    </div>
-
-
-    <button type="submit" class="btn btn-primary">Submit</button>
-
-
+                <input type="submit" class="btn btn-primary" value="log in" />
+           
+        
 </form>
+
